--- a/src/app/components/auth/register/register.component.html
+++ b/src/app/components/auth/register/register.component.html
@@ -1,23 +1,126 @@
 <div class="register-container">
   <h2>Register</h2>
-  <form>
+  <form
+    #registrationData="ngForm"
+    (ngSubmit)="onRegisterSubmit(registrationData)"
+  >
     <mat-form-field class="full-width">
-      <input matInput placeholder="Full Name" type="text" />
+      <input
+        matInput
+        name="First_Name"
+        ngModel
+        placeholder="First Name*"
+        type="text"
+        required
+      />
     </mat-form-field>
     <mat-form-field class="full-width">
-      <input matInput placeholder="Email" type="email" />
+      <input
+        matInput
+        name="Last_Name"
+        ngModel
+        placeholder="Last Name*"
+        type="text"
+        required
+      />
     </mat-form-field>
     <mat-form-field class="full-width">
-      <input matInput placeholder="Password" type="password" />
+      <input
+        matInput
+        name="email"
+        ngModel
+        required
+        placeholder="Email*"
+        type="email"
+      />
     </mat-form-field>
     <mat-form-field class="full-width">
-      <input matInput placeholder="Confirm Password" type="password" />
+      <input
+        matInput
+        name="phoneNo"
+        ngModel
+        placeholder="Phone no*"
+        type="number"
+        required
+      />
+    </mat-form-field>
+    <mat-form-field class="full-width">
+      <input
+        name="address"
+        ngModel
+        matInput
+        id="locality"
+        placeholder="Address"
+        autocomplete="off"
+      />
+    </mat-form-field>
+    <mat-form-field class="full-width">
+      <mat-select
+        ngModel
+        id="dietary-preference"
+        placeholder="Dietary Preference"
+        name="dietaryPreference"
+      >
+        <mat-option value="none">None</mat-option>
+        <mat-option value="vegetarian">Vegetarian</mat-option>
+        <mat-option value="vegan">Vegan</mat-option>
+        <mat-option value="gluten-free">Gluten-free</mat-option>
+        <!-- Add more options as needed -->
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field class="full-width">
+      <mat-select
+        ngModel
+        id="favorite-cuisine"
+        placeholder="Favorite cuisine"
+        name="favoriteCuisine"
+      >
+        <mat-option value="Greek">Greek</mat-option>
+        <mat-option value="Mexican">Mexican </mat-option>
+        <mat-option value="Korean">Korean </mat-option>
+        <mat-option value="Thai">Thai </mat-option>
+        <!-- Add more options as needed -->
+      </mat-select>
+    </mat-form-field>
+
+    <mat-form-field class="full-width">
+      <input
+        matInput
+        name="birthday"
+        ngModel
+        placeholder="Birthday"
+        [matDatepicker]="picker"
+      />
+      <mat-datepicker-toggle
+        matIconSuffix
+        [for]="picker"
+      ></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+
+    <mat-form-field class="full-width">
+      <input
+        matInput
+        name="password"
+        ngModel
+        placeholder="Password"
+        type="password"
+      />
+    </mat-form-field>
+    <mat-form-field class="full-width">
+      <input
+        matInput
+        name="passwordConfirm"
+        ngModel
+        placeholder="Confirm Password"
+        type="password"
+      />
     </mat-form-field>
     <button mat-raised-button color="primary" class="full-width">
       Register
     </button>
   </form>
   <p class="switch-link">
-    Already have an account? <a routerLink="/login">Login here</a>
+    Already have an account? <a routerLink="/">Login here</a>
   </p>
 </div>
